Import of TEAM/Net-Async-PostgreSQL-0.003 from CPAN.
gitpan-cpan-distribution: Net-Async-PostgreSQL
gitpan-cpan-version:      0.003
gitpan-cpan-path:         TEAM/Net-Async-PostgreSQL-0.003.tar.gz
gitpan-cpan-author:       TEAM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -14,5 +14,6 @@ meta-spec:
 name: Net-Async-PostgreSQL
 requires:
   IO::Async: 0.36
-  Protocol::PostgreSQL: 0.001
-version: 0.002
+  Protocol::PostgreSQL: 0.006
+  parent: 0
+version: 0.003
