--- a/dist.ini
+++ b/dist.ini
@@ -8,12 +8,15 @@ main_module	 = lib/Net/Async/PostgreSQL.pm
 [@Basic]
 
 [Prereqs]
+parent			= 0
 IO::Async		= 0.36
-Protocol::PostgreSQL	= 0.001
+Protocol::PostgreSQL	= 0.006
 
 [Prereqs / TestRequires]
 
 [NextRelease]
 
 [VersionFromModule]
+[PodVersion]
+[PkgVersion]
 
