--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200006, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Dist::Zilla version 4.200009, CPAN::Meta::Converter version 2.110930001'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -14,6 +14,6 @@ meta-spec:
 name: Net-Async-PostgreSQL
 requires:
   IO::Async: 0.36
-  Protocol::PostgreSQL: 0.007
+  Protocol::PostgreSQL: 0.008
   parent: 0
-version: 0.004
+version: 0.005
