--- a/META.yml
+++ b/META.yml
@@ -2,8 +2,7 @@
 abstract: 'PostgreSQL database support for IO::Async'
 author:
   - 'Tom Molesworth <cpan@entitymodel.com>'
-build_requires:
-  Test::postgresql: 0.09
+build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
@@ -17,4 +16,4 @@ requires:
   IO::Async: 0.36
   Protocol::PostgreSQL: 0.008
   parent: 0
-version: 0.006
+version: 0.007
